Refactor code and design.

--- a/public/src/pages/adminLogin.html
+++ b/public/src/pages/adminLogin.html
@@ -68,7 +68,7 @@
                 <input
                   id="login-email"
                   type="email"
-                  placeholder="Email"
+                  placeholder="Enter email"
                   autocomplete="off"
                   name="email"
                 />
@@ -79,7 +79,7 @@
                 <input
                   id="login-password"
                   type="password"
-                  placeholder="Password"
+                  placeholder="Enter password"
                   name="password"
                 />
                 <div class="show-btn">
