--- a/public/src/pages/registration.html
+++ b/public/src/pages/registration.html
@@ -68,7 +68,7 @@
                 <input
                   id="reg-username"
                   type="text"
-                  placeholder="Username"
+                  placeholder="Pick up a username"
                   autocomplete="off"
                   name="username"
                 />
@@ -79,7 +79,7 @@
                 <input
                   id="reg-email"
                   type="email"
-                  placeholder="Email"
+                  placeholder="Enter email"
                   autocomplete="off"
                   name="email"
                 />
@@ -90,7 +90,7 @@
                 <input
                   id="reg-password"
                   type="password"
-                  placeholder="Password"
+                  placeholder="Enter password"
                   name="password"
                 />
                 <div class="show-btn">
